-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 2.7.1
-
None
When trying to select an NDK by path in the "BlackBerry" section of QtCreator options, the central widget remains blank after any selection. However, after reopening the options dialog the central widget is filled with a table of variables from the selected NDK. This is likely a UI bug where the table view is not being updated, and significantly hampers efforts to setup Creator (because there is inaccurate feedback indicating that the NDK has not been found).