Qnx: Add support for internal 10.2 NDKs

Some changes in the new NDK 10.2 break the setup of BlackBerry 10.
Main changes that the current patch covers:
* Qnx environment variables are evaluated when sourcing the bbndk-env script
and are no longer hard coded when istalling the NDK
* The version number is appended to the bbndk-env file name.

More eventual changes may come and we may need to directly
parse the ndk xml descriptor file.

Task-number: QTCREATORBUG-9403
Change-Id: Ie7daf7b0eaf2a49339775cacb9973062d6101afa
Reviewed-by: Tobias Nätterlund <tobias.naetterlund@kdab.com>
Reviewed-by: Nicolas Arnaud-Cormos <nicolas@kdab.com>