src/plugins/qnx/qnxutils.h
@@ -58,6 +58,8 @@ public:
     static void prependQnxMapToEnvironment(const QMultiMap<QString, QString> &qnxMap, Utils::Environment &env);
     static Utils::FileName executableWithExtension(const Utils::FileName &fileName);
     static QString dataDirPath();
+    static QString qConfigPath();
+    static QString ndkVersion(const QString& ndkPath);
 };
 
 } // namespace Internal
